--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@mysten/dapp-kit": "^0.19.9",
+    "@mysten/sui": "^1.45.0",
+    "@tanstack/react-query": "^5.90.10",
     "next": "16.0.1",
     "postcss": "^8.5.6",
     "react": "19.2.0",
